MOAT test scripts
John Jacobsen jacobsen@npxdesigns.com
Requires: domhub-tools 100 or greater

============================================================================

V00-00-12  9/13/05
- Let GPS time string collection continue when dt != 20,000,000

============================================================================

V00-00-11  8/18/05
- Automatically catch GPS delta-T != 20,000,000 (readgps/stagedtests.pl -> moat)

============================================================================

V00-00-10  8/11/05
- Catch stuck echo-tests (in case of "Dead DOM" or otherwise)
- Added '-v' option to moat to show release version

============================================================================

V00-00-09  8/5/05
- Disable verbose logging during MJB

============================================================================

V00-00-08  7/26/05
Bug fixes/new features:
- Removed buggy interrupt counting code from moat

============================================================================

V00-00-07  7/19/05
Bug fixes/new features:
- Remove RPM dependency of dor-driver per Martin's installation
  requirements

============================================================================

V00-00-06  7/18/05
Bug fixes/new features:
- Fix bug in counting interrupt rate
- Added option to use Arthur's echo-test instead of readwrite
  (useful for large #s of DOMs, as readwrite doesn't scale well)

============================================================================

V00-00-05 7/13/05
Bug fixes/new features:
- Fix skipkbchk argument to moat and stagedtests.pl
- First fully RPMed release

============================================================================

V00-00-04 6/28/05
Bug fixes/new features:
- Fixed non-flushing std. output in readgps.c

============================================================================

V00-00-03 6/28/05
Bug fixes/new features:
- Renamed options in moat and stagedtests.pl to avoid conflicts.
