@@ -5,7 +5,7 @@
 # Started: Sun Jan 16 16:21:24 2005
 
 use strict;
-my $cmd = "moat -d 10 -c 600 -g -r 25200 -t 3600";
+my $cmd = "moat -d 10 -c 600 -g -r 3600 -t 3600 -a 21600";
 print "$cmd\n";
 exec $cmd;
 __END__
