@@ -4,6 +4,14 @@ Requires: domhub-tools 100 or greater
 
 ============================================================================
 
+V00-00-13  9/27/05
+- Add mode where we check domapp FPGA; save_tcal_stagedtests uses domapp FPGA
+  now, rather than STF FPGA
+- Change default times to 2 minutes each (configboot, domapp, stf, domapp
+  saving tcal data)
+
+============================================================================
+
 V00-00-12  9/13/05
 - Let GPS time string collection continue when dt != 20,000,000
 
